<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notif_choice"
            android:textSize="20dp"
            />

        <RadioGroup
            android:id="@+id/radioGroupDelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/troisjours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_day" />

            <RadioButton
                android:id="@+id/deuxjours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_day" />

            <RadioButton
                android:id="@+id/unjour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_day"/>

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notif_family"
            android:textSize="20dp"
            />
        <RadioGroup
            android:id="@+id/radioGroupFamille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/oui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/non"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>

        <Switch
            android:id="@+id/switch_video"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/grey"
            android:text="@string/video" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Ok"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/deconnexion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/grey"
            android:text="@string/deconnection"/>

    </LinearLayout>


</RelativeLayout>