<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lbl_name"
            android:textSize="18dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notif_choice"
            android:textSize="20dp"
            />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/troisjours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_day" />

            <RadioButton
                android:id="@+id/deuxjours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_day" />

            <RadioButton
                android:id="@+id/unjour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_day"
                android:checked="true"/>





        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notif_family"
            android:textSize="20dp"
            />
        <RadioGroup
            android:id="@+id/radioGroupFam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/oui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/non"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="true"/>



        </RadioGroup>


        <Button
            android:id="@+id/notifButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Ok"
            />

    </LinearLayout>

</ScrollView>