<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:id="@+id/ScrollViewcontact"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/practice_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:gravity="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/practice_doctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/practice_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/address"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/practice_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center">

            <Button
                android:id="@+id/map_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/practice_map" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llphone1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/practice_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llphone2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/call_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/practice_call" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llemail1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/practice_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llemail2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/email_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/practice_email" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llwebsite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/website"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/practice_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout> </ScrollView>

